--- a/AppClientCerisaie/pom.xml
+++ b/AppClientCerisaie/pom.xml
@@ -5,30 +5,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.panderium.cerisaie</groupId>
-    <artifactId>InscriptionTopicCerisaie</artifactId>
+    <artifactId>AppClientCerisaie</artifactId>
     <version>1.0-SNAPSHOT</version>
+
     <dependencies>
-
-
-        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.18.0</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>javax.persistence</groupId>
-            <artifactId>persistence-api</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-core</artifactId>
-            <version>5.3.1.Final</version>
-        </dependency>
-
         <!-- https://mvnrepository.com/artifact/javax.servlet/jstl -->
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -69,15 +49,7 @@
             <artifactId>hibernate-entitymanager</artifactId>
             <version>5.3.1.Final</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.11</version>
-        </dependency>
+
 
     </dependencies>
-
-
-
 </project>
