--- a/AppClientCerisaie/pom.xml
+++ b/AppClientCerisaie/pom.xml
@@ -8,6 +8,20 @@
     <artifactId>AppClientCerisaie</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.7.0</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
         <!-- https://mvnrepository.com/artifact/javax.servlet/jstl -->
         <dependency>
@@ -52,4 +66,6 @@
 
 
     </dependencies>
+
+
 </project>
